fix: flex gap for empty container

--- a/landing/landing1.css
+++ b/landing/landing1.css
@@ -221,6 +221,8 @@ small{
 	width: 100%;
 	align-items: center;
 	display: flex;
+    flex-direction: row;
+    gap: 1em;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
 }
